--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,12 +34,15 @@ logging.level.sun.rmi.loader =ERROR
 logging.level.ar.edu.iua.iw3.demo.perfiles=TRACE
 logging.level.ar.edu.iua.iw3.eventos=TRACE
 
+mail.carga.umbralTemperatura.to=pgaido524@mail.com
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pablogrio248@gmail.com
-spring.mail.password=odravecophlfudun
+spring.mail.username=spitalevictor@gmail.com
+spring.mail.password=fippsynvspixipaf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
 server.error.include-message = always
