hay una pestaña para modelar el login
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/bower.json
+++ b/src/main/webapp/ui/bower.json
@@ -2,6 +2,8 @@
   "name":"Trabajo Integrador iw3",
   "Version":"0.0.1",
   "dependencies": {
-    "angular":"~1.8.0"
+    "angular":"~1.8.0",
+    "angular-route":"~1.8.0"
+
   }
 }
