--- a/src/main/resources/application-mysqldev.properties
+++ b/src/main/resources/application-mysqldev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/TrabajoIntegradorWeb3?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=%&Y%%TRWER
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 server.port=8080
